@@ -1,21 +1,31 @@
-/* 
+/*
  * Copyright (c) 2005, Bernhard Walle
- * 
- * This program is free software; you can redistribute it and/or modify it under the terms of the 
- * GNU General Public License as published by the Free Software Foundation; You may only use 
+ *
+ * This program is free software; you can redistribute it and/or modify it under the terms of the
+ * GNU General Public License as published by the Free Software Foundation; You may only use
  * version 2 of the License, you have no option to use any other version.
  *
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
- * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See 
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See
  * the GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License along with this program; if 
+ * You should have received a copy of the GNU General Public License along with this program; if
  * not, write to the Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
  * -------------------------------------------------------------------------------------------------
  */
 #include "parport.h"
 #include "global.h"
+
+#ifdef __linux__
+#  include <linux/ppdev.h>
+#  include <linux/parport.h>
+#  include <unistd.h>
+#  include <sys/ioctl.h>
+#  include <sys/types.h>
+#  include <sys/stat.h>
+#  include <fcntl.h>
+#endif
 
 // -------------------------------------------------------------------------------------------------
 Parport::Parport(struct parport* port)
@@ -46,12 +56,18 @@ Parport::~Parport()
 void Parport::open(int flags, int* capabilities) throw (ParportError)
 {
     int ret;
-    
+
+    // that check must be performed before opening the device
+    if (!checkTristate())
+    {
+        throw ParportError(ParportError::EPP_NOTRISTATE);
+    }
+
     if ((ret = ieee1284_open(m_parport, flags, capabilities)) != E1284_OK)
     {
         throw ParportError(ret);
     }
-    
+
     m_isOpen = true;
 }
 
@@ -63,11 +79,11 @@ void Parport::close() throw (ParportError)
     {
         return;
     }
-    
+
     release();
-    
+
     int ret;
-    
+
     if ((ret = ieee1284_close(m_parport)) != E1284_OK)
     {
         throw ParportError(ret);
@@ -79,7 +95,7 @@ void Parport::close() throw (ParportError)
 void Parport::release() throw ()
 {
     ieee1284_release(m_parport);
-    
+
     m_isClaimed = false;
 }
 
@@ -88,26 +104,72 @@ void Parport::release() throw ()
 void Parport::claim() throw (ParportError)
 {
     int err;
-    
+
     if ((err = ieee1284_claim(m_parport)) != E1284_OK)
     {
         throw ParportError(err);
     }
-    
+
     m_isClaimed = true;
 }
 
 
 // -------------------------------------------------------------------------------------------------
+#ifdef __linux__
+bool Parport::checkTristate() throw ()
+{
+    int modes;
+
+    // only return false if we *know* that the parallel port is not capable of TRISTATE
+    if (!m_parport->filename || strlen(m_parport->filename) == 0)
+    {
+        return true;
+    }
+
+    int fd = ::open(m_parport->filename, O_RDONLY);
+    if (fd < 0)
+    {
+        return true;
+    }
+
+    if (ioctl(fd, PPCLAIM) != 0)
+    {
+        ::close(fd);
+        return true;
+    }
+
+    if (ioctl(fd, PPGETMODES, &modes) != 0)
+    {
+        ::close(fd);
+        return true;
+    }
+
+    ::close(fd);
+
+    if (!(modes & PARPORT_MODE_TRISTATE))
+    {
+        return false;
+    }
+
+    return true;
+}
+#else /* !__linux__ */
+bool Parport::checkTristate() throw ()
+{
+    return true;
+}
+#endif /* __linux__ */
+
+// -------------------------------------------------------------------------------------------------
 byte Parport::readData() throw (ParportError)
 {
     int ret;
-    
+
     if ((ret = ieee1284_read_data(m_parport)) < 0)
     {
         throw ParportError(ret);
     }
-    
+
     return (byte)ret;
 }
 
@@ -123,7 +185,7 @@ void Parport::writeData(byte data) throw ()
 void Parport::setDataDirection(bool reverse) throw (ParportError)
 {
     int ret;
-    
+
     if ((ret = ieee1284_data_dir(m_parport, reverse)) != E1284_OK)
     {
         throw ParportError(ret);
@@ -135,7 +197,7 @@ void Parport::setDataDirection(bool reverse) throw (ParportError)
 bool Parport::waitData(int mask, int val, struct timeval* timeout) throw (ParportError)
 {
     int ret;
-    
+
     if ((ret = ieee1284_wait_data(m_parport, mask, val, timeout)) != E1284_OK)
     {
         if (ret == E1284_TIMEDOUT)
@@ -147,10 +209,9 @@ bool Parport::waitData(int mask, int val, struct timeval* timeout) throw (Parpor
             throw ParportError(ret);
         }
     }
-    
+
     return true;
 }
-        
 
 
 // -------------------------------------------------------------------------------------------------
