@@ -1,15 +1,15 @@
-/* 
+/*
  * Copyright (c) 2005, Bernhard Walle
- * 
- * This program is free software; you can redistribute it and/or modify it under the terms of the 
- * GNU General Public License as published by the Free Software Foundation; You may only use 
+ *
+ * This program is free software; you can redistribute it and/or modify it under the terms of the
+ * GNU General Public License as published by the Free Software Foundation; You may only use
  * version 2 of the License, you have no option to use any other version.
  *
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
- * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See 
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See
  * the GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License along with this program; if 
+ * You should have received a copy of the GNU General Public License along with this program; if
  * not, write to the Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
  * -------------------------------------------------------------------------------------------------
@@ -33,7 +33,7 @@
  * of ieee1284 profit!
  *
  * This class is just the bridge from IEEE1284 to Qt (C++).
- * 
+ *
  * The complete documentation of libieee1284 in the Web at http://cyberelk.net/tim/libieee1284/.
  * You also should have it on your local system if libieee1284 is installed (at least on Linux).
  *
@@ -43,17 +43,17 @@
 class Parport
 {
     friend class ParportList;
-    
+
    public:
-        
+
         /**
          * Deletes a parport object. If the parallel port is open, it will be closed. This
          * greatly simplifies error handling using C++ exceptions.
          */
         virtual ~Parport();
-        
+
         /**
-         * In order to begin using a port it must be opened. Any initial set-up of the port is done 
+         * In order to begin using a port it must be opened. Any initial set-up of the port is done
          * at this stage. When an open port is no longer needed it should be closed using
          * close().
          *
@@ -61,13 +61,13 @@ class Parport
          * http://cyberelk.net/tim/libieee1284/interface/open.html.
          *
          * @param flags  F1284_EXCL if this device cannot share the port with any other device.
-         * @param capabilities @c NULL or a pointer to storage for an int, which will be treated 
+         * @param capabilities @c NULL or a pointer to storage for an int, which will be treated
          *        as a set of flags, one per bit, which the library sets or clears as appropriate.
          * @exception ParportError if the opening failed
          */
         void open(int flags = 0, int* capabilities = NULL)
         throw (ParportError);
-        
+
         /**
          * Closes the port.
          *
@@ -75,7 +75,7 @@ class Parport
          */
         void close()
         throw (ParportError);
-        
+
         /**
          * Claim access to the port. claim() must be called on an open port before any other
          * libieee1284 function for accessing a device on it.
@@ -84,14 +84,14 @@ class Parport
          */
         void claim()
         throw (ParportError);
-        
+
         /**
-         * This function undoes the effect of claim() by releasing the port for use by other 
-         * drivers. It is good practice to release the port whenever convenient.  
+         * This function undoes the effect of claim() by releasing the port for use by other
+         * drivers. It is good practice to release the port whenever convenient.
          */
         void release()
         throw ();
-        
+
         /**
          * Reads data. See http://cyberelk.net/tim/libieee1284/interface/data-pin-access.html.
          *
@@ -100,7 +100,7 @@ class Parport
          */
         byte readData()
         throw (ParportError);
-        
+
         /**
          * Writes data to the data pins. See
          * http://cyberelk.net/tim/libieee1284/interface/data-pin-access.html
@@ -109,7 +109,19 @@ class Parport
          */
         void writeData(byte data)
         throw ();
-        
+
+        /**
+         * Checks if the hardware parallel port is capable of TRISTATE.
+         *
+         * This function is only implemented on Linux since it does not use libieee1284
+         * but raw ppdev access functions.
+         *
+         * @return @c true if the parallel port is capable of tristate (or if the function
+         *         is not implemented, @c false if it is not capable of tristate
+         */
+        bool checkTristate()
+        throw ();
+
         /**
          * Sets the data direction.
          * See http://cyberelk.net/tim/libieee1284/interface/data-pin-access.html.
@@ -119,7 +131,7 @@ class Parport
          */
         void setDataDirection(bool reverse)
         throw (ParportError);
-        
+
         /**
          * Wait for data.
          * See http://cyberelk.net/tim/libieee1284/interface/data-pin-access.html.
@@ -129,7 +141,7 @@ class Parport
          */
         bool waitData(int mask, int val, struct timeval* timeout)
         throw (ParportError);
-        
+
         /**
          * Returns the name of the parallel port.
          *
@@ -137,7 +149,7 @@ class Parport
          */
         QString getName() const
         throw ();
-        
+
         /**
          * Returns the base address of the parallel port, if this has any meaning, or zero.
          *
@@ -145,7 +157,7 @@ class Parport
          */
         unsigned long getBaseAddress() const
         throw ();
-        
+
         /**
          * Returns the ECR address of the port, if that has any meaning, or zero.
          *
@@ -153,7 +165,7 @@ class Parport
          */
         unsigned long getHighBaseAddress() const
         throw ();
-        
+
         /**
          * The filename associated with this port, if that has any meaning, or QString::null.
          *
@@ -161,17 +173,17 @@ class Parport
          */
         QString getFileName() const
         throw ();
-        
+
      protected:
-        
+
         /**
-         * Creates a new instance of a parallel port. This instance is created using a 
+         * Creates a new instance of a parallel port. This instance is created using a
          * struct parport* pointer from C API. The user don't have to call this function
          * (since it is proteced, he even cannot), but he has to use the ParportList class
          * to get new instances.
          */
         Parport(struct parport* port);
-        
+
     private:
         struct parport* m_parport;
         bool   m_isOpen;
